# KPlayer

./: .gitignore  README.md
KPlayer/: CMakeLists.txt  KPlayer.sln  KPlayer.vcxproj  Makefile  main.cpp
KPlayer/Player/: Player.cpp  Player.hpp
KPlayer/Scenes/: MainMenuScene.cpp  MainMenuScene.hpp  PlayBackScene.cpp  PlayBackScene.hpp  Scene.hpp
KPlayer/UI/: Button.cpp  Button.hpp  Slider.cpp  Slider.hpp
KPlayer/Utils/: TextRenderer.cpp  TextRenderer.hpp
KPlayer/include/libavutil/: ffversion.h
KPlayer/lib/pkgconfig/: libavdevice.pc  libavfilter.pc
KPlayer/src/: App.cpp  App.h  app.rc  main.cpp  resources.qrc
KPlayer/src/Player/: MediaPlayer.cpp  MediaPlayer.h
KPlayer/src/UI/: AudioVisualizer.cpp  AudioVisualizer.h  Button.cpp  Button.h  MainScene.cpp  MainScene.h  MainScene.ui  Menu.cpp  Menu.h  PlayerScene.cpp  PlayerScene.h  Scene.cpp  Scene.h  Slider.cpp  Slider.h
KPlayer/src/Utils/: FileManager.cpp  FileManager.h
KPlayer/src/assets/styles/: LightTheme.qss  MonokaiPro.qss  NordStyle.qss  OceanBreeze.qss  PastelDream.qss  SolarizedDark.qss
KPlayer/x64/Debug/: KPlayer.exe.recipe
KPlayer/x64/Debug/KPlayer.tlog/: KPlayer.lastbuildstate
